picture_url added schema controller and views

--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1">
       <h1>Create a new flat</h1>
@@ -6,6 +6,7 @@
         <%= f.input :name %>
         <%= f.input :address %>
         <%= f.input :description %>
+        <%= f.input :picture_url %>
         <%= f.input :price_per_night %>
         <%= f.input :number_of_guests %>
         <%= f.submit class: 'btn btn-primary' %>
