--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+ .map {
+  height: 350px;
+  background-position: center;
+  background-size: cover;
+}
