--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,4 +1,4 @@
-<div class = "container">
+<div class = "container mt-5">
 
   <div class="row">
     <h1>All our Flats</h1>
@@ -12,7 +12,7 @@
     <% @flats.each do |flat| %>
       <div class="col md-4">
         <div class="card my-3" style="width: 18rem;">
-          <%# <img src="..." class="card-img-top" alt="..."> %>
+          <img src= <%= flat.picture_url %> class="card-img-top" alt="flat appartement">
           <div class="card-body">
             <h5 class="card-title"><%= flat.name %></h5>
             <p class="card-text"><%= flat.address %></p>
