--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,4 +1,6 @@
-<div class="container">
+<div class="map" style="background-image: url('<%= @flat.picture_url %>')"></div>
+
+<div class="container mt-5">
   <div class="row">
   </div>
 
