--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,29 +1,54 @@
 <div class="map" style="background-image: url('<%= @flat.picture_url %>')"></div>
 
-<div class="container mt-5">
+<div class="container">
   <div class="row">
   </div>
 
   <div class="row">
     <div class="col-8">
-     <h1><%= @flat.name %></h1>
-     <p><%= @flat.address %></p>
-     <h3>A bit more about this flat...</h3>
-     <p><%= @flat.description %></p>
+      <div class="card bg-light my-3" style="top: -60px;">
+        <div class="card-body">
+          <h1><%= @flat.name %></h1>
+          <p><%= @flat.address %></p>
+        </div>
+      </div>
+      <div class="card bg-light my-3" style="top: -60px;">
+        <div class="card-body">
+          <h3>A bit more about this flat...</h3>
+          <p><%= @flat.description %></p>
+        </div>
+      </div>
     </div>
     <div class="col-4">
-      <div>
-        <h5>Book this place!</h5>
+      <div class="card bg-light my-3" style="top: -60px;">
+        <div class="card-body">
+            <h5>Book this place!</h5>
+            <form action="">
+              <div class="input-group">
+                <span class="input-group-text" id="start-date-label">From:</span>
+                <input type="text" class="form-control" placeholder="12/10/2017" aria-label="start-date" aria-describedby="start-date-label">
+              </div>
+              <div class="input-group mt-2">
+                <span class="input-group-text" id="end-date-label">To:</span>
+                <input type="text" class="form-control" placeholder="18/10/2017" aria-label="end-date" aria-describedby="start-date-label">
+              </div>
+              <input type="submit" value="Book" class="btn btn-primary mt-2" style="width: 100%">
+            </form>
+        </div>
       </div>
-      <div>
-        <h5>Details</h5>
-          <p><i class="fa-solid fa-euro-sign"></i> <%= @flat.price_per_night %></p>
-          <p><i class="fa-solid fa-person"></i> <%= @flat.number_of_guests %></p>
+      <div class="card bg-light my-3" style="top: -60px;">
+        <div class="card-body">
+            <h5>Details</h5>
+              <div class="d-flex">
+                <p ><i class="fa-solid fa-euro-sign"></i> <%= @flat.price_per_night %></p>
+                <p class="flex-grow-1 px-3"><i class="fa-solid fa-person"></i> <%= @flat.number_of_guests %></p>
+              </div>
+        </div>
       </div>
-      <div>
-        <h6>Share</h6>
-        <p><i class="fa-brands fa-facebook"></i> <i class="fa-brands fa-twitter"></i> <i class="fa-brands fa-pinterest"></i></p>
+      <div class="card bg-light" style="top: -60px;">
+        <div class="card-body">
+            <h6>Share</h6>
+            <p><i class="fa-brands fa-facebook"></i> <i class="fa-brands fa-twitter"></i> <i class="fa-brands fa-pinterest"></i></p>
+        </div>
       </div>
-    </div>
   </div>
-</div>
