--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,19 +1,29 @@
 <div class = "container mt-5">
 
   <div class="row">
-    <h1>All our Flats</h1>
+    <div class="col">
+      <h1>All our Flats</h1>
+    </div>
   </div>
 
   <div class="row">
-    <p>All <%= @flats.count %> flats.</p>
+    <div class="col">
+      <% if @query %>
+        <p>You searched for <strong><%= @query %></strong>. We found <%= @flats.count %> flats out of our <%= Flat.count %> on our website.</p>
+      <% else %>
+        <p>All <%= Flat.count %> flats.</p>
+      <% end %>
+    </div>
   </div>
 
   <div class="row">
     <% @flats.each do |flat| %>
-      <div class="col md-4">
+      <div class="col-md-3">
         <div class="card my-3" style="width: 18rem;">
-          <img src= <%= flat.picture_url %> class="card-img-top" alt="flat appartement">
-          <div class="card-body">
+          <div class="center-cropped card-img-top"
+            style="background-image: url('<%= flat.picture_url %>');">
+          </div>
+          <div class="card-body" style="height: 7rem;">
             <h5 class="card-title"><%= flat.name %></h5>
             <p class="card-text"><%= flat.address %></p>
           </div>
